--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,50 @@
-# Local .terraform directories
-**/.terraform/*
+# Node & Remix App
+/app/node_modules
+/app/.next
+/app/build
+/app/public/build
+/app/.cache
 
-# .tfstate files
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dotenv
+*.env
+.env.local
+.env.*.local
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# Docker
+*.tar
+*.pid
+
+# Terraform
 *.tfstate
 *.tfstate.*
-
-# Crash log files
-crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
+.terraform/
+.crash
+.terraform.lock.hcl
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+.terraform.tfvars
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# VSCode/IDE
+.vscode/
+.idea/
+*.swp
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# GitHub Actions artifacts
+.github/workflows/*.bak
+.github/workflows/*.log
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Docker test artifacts
+docker-publish.sh
+node_modules
