--- a/.github/workflows/infra-ci-cd.yml
+++ b/.github/workflows/infra-ci-cd.yml
@@ -169,5 +169,5 @@ jobs:
         path: infrastructure/environments/test
  
     - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
+      run: terraform apply -auto-approve
       working-directory: ./infrastructure/environments/test
