--- a/.github/workflows/infra-ci-cd.yml
+++ b/.github/workflows/infra-ci-cd.yml
@@ -1,57 +1,53 @@
 name: Terraform CI-CD
- 
+
 on:
   push:
     branches: [ main ]
   pull_request:
- 
+
 permissions:
   id-token: write
   contents: read
   pull-requests: write
- 
+
 env:
   ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
   ARM_ACCESS_KEY: "${{ secrets.ARM_ACCESS_KEY }}"
- 
-defaults:
-  run:
-    working-directory: ./infrastructure/environments/test
 
- 
 jobs:
   tflint:
     runs-on: ubuntu-latest
- 
+
     steps:
     - uses: actions/checkout@v4
       name: Checkout source code
- 
+
     - uses: actions/cache@v4
       name: Cache plugin dir
       with:
         path: ~/.tflint.d/plugins
         key: tflint-${{ hashFiles('.tflint.hcl') }}
- 
+
     - uses: terraform-linters/setup-tflint@v4
       name: Setup TFLint
       with:
         tflint_version: latest
- 
+
     - name: Show version
       run: tflint --version
- 
+
     - name: Init TFLint
       run: tflint --init
       env:
         GITHUB_TOKEN: ${{ github.token }}
- 
+
     - name: Run TFLint
       id: tflint
       run: tflint -f compact
- 
+      working-directory: ./infrastructure/environments/test
+
   terraform-plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
@@ -59,34 +55,36 @@ jobs:
       ARM_SKIP_PROVIDER_REGISTRATION: true
     outputs:
       tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
- 
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
- 
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_wrapper: false
- 
+
     - name: Azure Login (OIDC)
       uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
- 
+
     - name: Terraform Init
       run: terraform init
- 
+      working-directory: ./infrastructure/environments/test
+
     - name: Terraform Format
       run: terraform fmt -check
- 
+      working-directory: ./infrastructure/environments/test
+
     - name: Terraform Plan
       id: tf-plan
       run: |
         export exitcode=0
-        terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        terraform plan -detailed-exitcode -no-color -out=tfplan || export exitcode=$?
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
         if [ $exitcode -eq 1 ]; then
           echo Terraform Plan Failed!
@@ -94,13 +92,14 @@ jobs:
         else
           exit 0
         fi
- 
+      working-directory: ./infrastructure/environments/test
+
     - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
         path: infrastructure/environments/test/tfplan
- 
+
     - name: Create String Output
       id: tf-plan-string
       run: |
@@ -115,13 +114,14 @@ jobs:
         echo '```' >> $GITHUB_OUTPUT
         echo "</details>" >> $GITHUB_OUTPUT
         echo "${delimiter}" >> $GITHUB_OUTPUT
- 
+      working-directory: ./infrastructure/environments/test
+
     - name: Publish Terraform Plan to Task Summary
       env:
         SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
       run: |
         echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
- 
+
     - name: Push Terraform Output to PR
       if: github.ref != 'refs/heads/main'
       uses: actions/github-script@v7
@@ -137,37 +137,38 @@ jobs:
               repo: context.repo.repo,
               body: body
           })
- 
+
   terraform-apply:
     name: 'Terraform Apply'
     if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
     environment: production
     needs: [terraform-plan]
-   
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
- 
+
     - name: Azure Login (OIDC)
       uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
- 
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
- 
+
     - name: Terraform Init
       run: terraform init
- 
+      working-directory: ./infrastructure/environments/test
+
     - name: Download Terraform Plan
       uses: actions/download-artifact@v4
       with:
         name: tfplan
         path: infrastructure/environments/test
- 
+
     - name: Terraform Apply
       run: terraform apply -auto-approve tfplan
       working-directory: ./infrastructure/environments/test
